# gaia-agent

./: .gitignore  README.md  agent.ipynb  agent.py  app.py  graph_diagram.mmd  langgraph.json  pyproject.toml  questions.ipynb  requirements.txt  tools.py
agent/react/: agent_react.ipynb  graph.py  nodes.py
agent/reflection/: agent_reflection.ipynb  graph.py  nodes.py
notebook/: agent_multi_agent.ipynb  agent_plan_execute.ipynb  agent_react.ipynb  agent_reflection.ipynb
src/gaia_agent/agents/: base.py
src/gaia_agent/agents/multi_agent/: README.md  graph.py  nodes.py  state.py
src/gaia_agent/agents/plan_execute/: README.md  graph.py  nodes.py  state.py
src/gaia_agent/agents/react/: README.md  graph.py  nodes.py  state.py
src/gaia_agent/agents/reflection/: README.md  graph.py  nodes.py  state.py
src/gaia_agent/common/: nodes.py  prompts.py  tools.py
src/gaia_agent/prompts/: planner.txt  reflection.txt  replanner.txt  supervisor.txt
utils/: agent.py  nodes.py  tools.py
